data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1103.wast
;; 4. **Test Four**:    - A `br_table` followed by a `br_if` targeting the loop's label, designed to test the boundary index equal to the number of entries in the `br_table`.    - **Constraint**: Checks if edge boundary values for indices are handled correctly without failing.    - **Relation**: Validates correct behavior for edge boundary conditions within `br_table`.

(assert_invalid
  (module
    (func $test_br_table_br_if_loop
      (block (loop (result i32)
        (i32.const 0)
        (block (br_table 0 (br_if 0 (i32.const 1))))
        (i32.const 1)
        (end)
      ))
    )
  )
  "type mismatch"
)